# shuffle_play_folder_of_songs

./: .gitignore  DESCRIPTION.txt  README.txt  __init__.py  gui.py  main.py  media_utils.py  player.py  playlist.py  pyproject.toml  request.md  requirements.txt  state.json  state.py
tests/: test_media_utils.py  test_playlist.py  test_state.py
