[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "song-folder-player"
version = "0.1.0"
description = "A GUI application for playing media from folders"
requires-python = ">=3.10"
dependencies = [
    "python-vlc>=3.0.0",
]

[project.scripts]
song-folder-player = "song_folder_player.main:main"

[tool.setuptools]
packages = ["song_folder_player"]
package-dir = {"song_folder_player" = "."}
